* Fixed path for docker build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,6 @@ build:
     - pipelines
     - web
   script:
-    - docker build -t $IMAGE_NAME:$FACTORIO_VERSION -t $IMAGE_NAME:latest --build-arg FACTORIO_VERSION=$FACTORIO_VERSION docker/
+    - docker build -t $IMAGE_NAME:$FACTORIO_VERSION -t $IMAGE_NAME:latest --build-arg FACTORIO_VERSION=$FACTORIO_VERSION .
     - docker push $IMAGE_NAME:$FACTORIO_VERSION
     - docker push $IMAGE_NAME:latest
